tests/fixtures/invalid/int_in_str.py
# Cannot use 'in' with Int and Str
x: bool = 1 in "hello"
